@@ -13,9 +13,10 @@ Calculating trailing traverses...
 
 Calculating statistics...
 
-Survey contains 1 survey station, joined by 0 legs.
+Survey contains 2 survey stations, joined by 0 legs.
 There are 0 loops.
+Survey has 2 connected components.
 Total length of survey legs =    0.00m (   0.00m adjusted)
 Total plan length of survey legs =    0.00m
 Total vertical length of survey legs =    0.00m
-   1 0-node.
+   2 0-nodes.
