@@ -1,0 +1,3 @@
+( Easting, Northing, Altitude )
+(36000.00, 83000.00,  1600.00 ) 1
+(36000.00, 83000.00,  1600.00 ) 2
